# cmake-iotcore-mbed-building

./: CMakeLists.txt  README.md  device_info.json  main.cpp
main/: main.c  onboarding_config.json
